--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,7 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
 
 # production
 /build
@@ -24,7 +15,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
+# local files
+prisma/dev.db
+prisma/migrations/**
 .env.local
 .env.development.local
 .env.test.local
