--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "fetch-backend-takehome",
-  "version": "1.0.50",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
-  },
-  "dependencies": {
-    "elysia": "latest"
-  },
-  "devDependencies": {
-    "bun-types": "latest"
-  },
-  "module": "src/index.js"
+    "name": "fetch-backend-takehome",
+    "version": "1.0.50",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "bun run --watch src/index.ts"
+    },
+    "dependencies": {
+        "@prisma/client": "5.20.0",
+        "elysia": "latest"
+    },
+    "devDependencies": {
+        "bun-types": "latest",
+        "prisma": "^5.20.0"
+    },
+    "module": "src/index.js",
+    "prettier": {
+        "tabWidth": 4,
+        "printWidth": 100
+    }
 }
