Start work on Docker and summary.txt, change .env

--- a/.env
+++ b/.env
@@ -1,6 +1,3 @@
 # Database URL connection string. An SQLite database is used, which can be
-# changed in /prisma/schema.prisma in the datasource.
+# changed in /prisma/schema.prisma datasource.
 DATABASE_URL="file:./dev.db"
-
-# Port to run the server on. Defaults to 8000.
-PORT=8000
