add tests, add to summary, change readme, change .env, clarify code

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 # Database URL connection string. An SQLite database is used, which can be
 # changed in /prisma/schema.prisma datasource.
 DATABASE_URL="file:./dev.db"
+
+# Port to run server
+PORT=8000
